--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ set(OpenCV_ROOT "${VCPKG_INSTALLED_DIR}/x64-mingw-dynamic/share/opencv4")
 message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 find_package(OpenCV REQUIRED)
 find_package(fftw3 REQUIRED)
-find_package(CHOLMOD REQUIRED)
-find_package(OpenBLAS REQUIRED)
+# find_package(CHOLMOD REQUIRED)
+# find_package(OpenBLAS REQUIRED)
 
 # Set files
 SET(ncorr_src ../src/ncorr.cpp ../src/Strain2D.cpp ../src/Disp2D.cpp ../src/Data2D.cpp ../src/ROI2D.cpp ../src/Image2D.cpp ../src/Array2D.cpp)
@@ -41,10 +41,10 @@ add_executable(DICProject ncorr_test.cpp)
 message(STATUS "OpenCV libraries: ${OpenCV_LIBS}")
 message(STATUS "fftw3 libraries: ${FFTW3_LIBRARIES}")
 
-target_link_directories(DICProject PRIVATE "${VCPKG_INSTALLED_DIR}/x64-mingw-dynamic/lib")
+target_link_directories(DICProject PUBLIC "${VCPKG_INSTALLED_DIR}/x64-mingw-dynamic/lib")
 
 target_link_libraries(DICProject ncorr)
+target_link_libraries(DICProject FFTW3::fftw3)
 target_link_libraries(DICProject ${OpenCV_LIBS})
-target_link_libraries(DICProject ${FFTW3_LIBRARIES})
-target_link_libraries(DICProject OpenBLAS::OpenBLAS)
-target_link_libraries(DICProject SuiteSparse::CHOLMOD)
+# target_link_libraries(DICProject OpenBLAS::OpenBLAS)
+# target_link_libraries(DICProject SuiteSparse::CHOLMOD)
